# remember-bday

./: Cargo.toml
src/: lib.rs  main.rs  notifications.rs  vcard.rs
src/notifications/: gen.rs  linux.rs  linux_gen.rs  mod.rs  windows.rs
