[package]
name = "remember-bday"
version = "0.1.0"
edition = "2021"
description = "A small programm to remind you of birthdays noted in your contacts."
license = "MIT"

[dependencies]
dbus = "0.9.7"

[dependencies.chrono]
version = "0.4.23"
default-features = false
features = ["alloc", "std", "clock"]
