[package]
name = "remember-bday"
version = "0.1.0"
edition = "2021"
description = "A small programm to remind you of birthdays noted in your contacts."
license = "MIT"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.61", features = ["UI_Notifications", "Data_Xml_Dom"] }

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["alloc", "std", "clock"]
